--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,19 +6,19 @@ locale.list.nl              = "nl_BE"
 locale.list.en              = "en_EN"
 
 db.adapter 	     		    = "pdo_mysql"
-db.params.host 	     		= "ID146507_bolderberg.db.webhosting.be"
-db.params.username   		= "ID146507_bolderberg"
-db.params.password   		= "P7acRazetrajEFre"
-db.params.dbname 	 	    = "ID146507_bolderberg"
+db.params.host 	     		= ""
+db.params.username   		= ""
+db.params.password   		= ""
+db.params.dbname 	 	    = ""
 
 encryption.salt             = "fuT6uMEdr4a"
 
-cookie.name                 = "Infinite_bolderberg"
+cookie.name                 = "Infinite_domeinnaam"
 
 ; System configuration
-system.web.url              = "https://www.bolderberg.be"
+system.web.url              = "https://www.domeinnaam.be"
 system.web.baseurl          = ""
-system.web.domain           = "www.bolderberg.be"
+system.web.domain           = "www.domeinnaam.be"
 
 system.defaults.language 	= "nl"
 system.language.nl 		    = "Nederlands"
@@ -28,15 +28,15 @@ system.language.nl 		    = "Nederlands"
 ; Meta Tags
 meta.author                 = "axento.be"
 meta.robots                 = "index, follow"
-meta.headtitle              = "Bolderberg te Heusden-Zolder in Limburg"
-meta.keywords               = "fietsen,wandelen,kluis,domein,bovy,circuit,zolder,bolderberg,limburg,heusden,volleybal,voetbal,gratis,vrijkaarten,soete-wey,savarin,mint,pits,grand prix,auto,culinair,cuisine,vakantie,overnachten,kabouter,pad,vissen,restaurant,hotel,fiets,mountainbike,koersfiets,paarden,stal,ijs,bolderiaan,bolderke,sint,job,terlamen,terlaemen,tijl,tyl,van,culinair,ys,fietscafe,fietshotel,avondfietsen,motor,sport,school,driften,wheels,corvette,club,skylimit,events,otobar,karting,speedwear,cycling,bmx,vlaamse,wieler,promove,safe,driving,tent,pannenkoeken,bakker,festival,live,party,summer, wellness, sauna, massage, speeltuin,coach,team,building,wijers"
-meta.description            = "Toeristische, culturele en sportieve voorstelling van het dorp Bolderberg en zijn verenigingen, handelaars en activiteiten op Circuit Zolder, Domein Bovy en de Kluis. ook het dorp waar Tijl van Limburg zich afspeelde."
+meta.headtitle              = "Titel website"
+meta.keywords               = "your,keywords,here"
+meta.description            = "Your SEO description goes here"
 
 ; Public folder
 public.folder               = "www"
 
 ; Contactform settings
-contact.to                  = "joeri.erregeerts@axento.be"
+contact.to                  = "info@axento.be"
 
 ; switch tabs on/off (true/false)
 modules.tab.blocks          = true
@@ -88,25 +88,25 @@ logo.width                 = 400
 logo.filesize              = 1 ;max filesize in MB
 
 [test : production]
-db.params.host              = "ID146507_preview.db.webhosting.be"
-db.params.username          = "ID146507_preview"
-db.params.password          = "w3afepe3aDRa"
-db.params.dbname            = "ID146507_preview"
+db.params.host              = ""
+db.params.username          = ""
+db.params.password          = ""
+db.params.dbname            = ""
 
 contact.to                  = "info@axento.be"
 
-system.web.url              = "https://preview.axento.be"
+system.web.url              = "https://domeinnaambe.webhosting.be"
 system.web.baseurl          = ""
-system.web.domain           = "preview.axento.be"
+system.web.domain           = "domeinnaambe.webhosting.be"
 
 [laptop : production]
 db.params.host 	     		= "localhost"
 db.params.username   		= "joeri"
-db.params.password   		= "9pj9t6v9"
-db.params.dbname 	 	    = "2018_bolderberg"
+db.params.password   		= "xxxxxxxx"
+db.params.dbname 	 	    = "yyyy_domeinnaam"
 
 contact.to                  = "info@axento.be"
 
-system.web.url              = "http://bolderberg:8888"
+system.web.url              = "http://domeinnaam:8888"
 system.web.baseurl          = ""
-system.web.domain           = "bolderberg"
+system.web.domain           = "domeinnaam"
